correcting main header left-alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,7 @@ h2 {
     float: left;
     width: 33%;
     font-size: 200%;
+    margin-left: 20px;
 }
 
 #main-heading a {
